移除OWO表情组件，采用自定义的表情组件与渲染流程
